# vault-recall

./: .gitignore  README.md  pyproject.toml
demo_vault/: MOC_도구.md  MOC_분석 기법.md  index.md  pandas 요약.md  streamlit 요약.md  고아 노트 예시.md  답변_퍼널 병목.md  미검증 아이디어 메모.md  비모수 검정 정리.md  코호트 리텐션 분석.md  퍼널 개선 경험.md  퍼널 분석 기초.md
docs/: DECISION_LOG.md  PORTFOLIO.md
eval/: gold_career.json  gold_demo.json  gold_paraphrase.json
scripts/: sync_notion.py
src/vault_recall/: __init__.py  cli.py  diagnose.py  evalkit.py  graph.py  ingest.py  parser.py  recall.py  report.py  srs.py
src/vault_recall/search/: bm25.py  embed.py  hybrid.py
tests/: test_core.py  test_sync.py
